apps/linkding/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: apps-linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
        home-platform/analytics-collect: "true"
    spec:
      enableServiceLinks: false
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.47.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-data
